fixing main page spacing and title

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,10 @@ body {
   }
   
   .pyramid-section {
-    @apply cursor-pointer transition-transform duration-200 hover:scale-105;
+    @apply cursor-pointer;
+  }
+  
+  .pyramid-section-group {
+    @apply cursor-pointer transition-all duration-200 ease-in-out hover:filter hover:brightness-125;
   }
 }
